[package]
name = "src"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
colored = "2.1.0"
git2 = { version = "0.19.0", features = ["zlib-ng-compat"] }
hex = "0.4.3"
http = "1.1.0"
indicatif = "0.17.8"
inquire = "0.7.5"
minus = { version = "5.6.1", features = ["static_output", "search"] }
regex = "1.11.1"
skim = { version = "0.10.4", default-features = false }
ssh2-config = { git = "https://github.com/dmeijboom/ssh2-config", rev = "e9d528a16700d0b5769948896327e3f6871bf584" }
tempfile = "3.13.0"
thiserror = "1.0.64"
which = "6.0.3"
