[package]
name = "src"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.42"
colored = "3.0.0"
git2 = { version = "0.20.0", features = ["zlib-ng-compat"] }
hex = "0.4.3"
http = "1.2.0"
indicatif = "0.17.9"
inquire = "0.7.5"
minus = { version = "5.6.1", features = [
    "static_output",
    "search",
    "dynamic_output",
] }
nom = "7.1.3"
regex = "1.11.1"
skim = { version = "0.10.4", default-features = false }
ssh2-config = { git = "https://github.com/dmeijboom/ssh2-config", rev = "e9d528a16700d0b5769948896327e3f6871bf584" }
tempfile = "3.15.0"
thiserror = "2.0.11"
which = "7.0.1"
