[package]
name = "src"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.47"
colored = "3.0.0"
git2 = { version = "0.20.1", features = ["zlib-ng-compat"] }
gix = { version = "0.70.0", features = ["blocking-network-client", "max-performance-safe", "parallel"] }
gix-hash = "0.16.0"
hex = "0.4.3"
http = "1.2.0"
inquire = "0.7.5"
minus = { version = "5.6.1", features = [
    "static_output",
    "search",
    "dynamic_output",
] }
nom = "8.0.0"
prodash = { version = "29.0.1", features = ["render-line", "render-line-crossterm"] }
regex = "1.11.1"
skim = { version = "0.10.4", default-features = false }
ssh2-config = { git = "https://github.com/dmeijboom/ssh2-config", rev = "e9d528a16700d0b5769948896327e3f6871bf584" }
strip-ansi-escapes = "0.2.1"
tempfile = "3.17.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
which = "7.0.2"
